syntax = "proto3";
package message;

enum SERVICE{
    NONE= 0;
    CLIENT= 1;
    GATESERVER= 2;
    ACCOUNTSERVER=3;
    WORLDSERVER=4;
    ZONESERVER=5;
    WORLDDBSERVER=6;
};

enum CHAT{
    MSG_TYPE_WORLD= 0;
    MSG_TYPE_PRIVATE= 1;
    MSG_TYPE_ORG= 2;
    MSG_TYPE_COUNT= 3;
};

message Ipacket{
    int32  Stx = 1;
    SERVICE  DestServerType = 2;
    int32  Ckx = 3;
    int64  Id = 4;
}

message PlayerData{
    int64 PlayerID = 1;
    string PlayerName = 2;
    int32 PlayerGold = 3;
}

message RpcHead{
    int64  Id = 1;
    int64  CallId = 2;
    int32  SocketId = 3;
}

message RpcPacket{
    string FuncName = 1;
    int32 ArgLen = 2;
    RpcHead RpcHead = 3;
    bytes RpcBody = 4;
}